# phototagging

./: .gitignore  Makefile  fillter.py  main.py  pyproject.toml  results.json  results.txt
.github/workflows/: python-package-pip.yml
src/phototag/: cli.py  db.py  meta.py  metadata.py  metadata_manager.py  phototag.py
test/: test_cli.py  test_db.py  test_metadata.py  test_metadata_manager.py  test_phototag.py
